[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Solutions to advent of code 2023"
authors = ["Gerard Cardoso <gerard@nplan.io>"]
readme = "README.md"
packages = [{include = "advent_of_code_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
